# gsim2

./: Cargo.toml  LICENSE.md  build.rs
benches/: sim.rs
shaders/: .gitignore  common.comp  common.wgsl  component.comp  component.wgsl  reset.comp  reset.wgsl  wire.comp  wire.wgsl
src/: buffer.rs  gpu.rs  graph.rs  lib.rs  logic.rs  test.rs  vec.rs
src/test/: component.rs
