[package]
name = "gsim2"
version = "2.0.0"
edition = "2021"
authors = ["Mathis Rech"]
license = "Apache-2.0"

[lib]
name = "gsim2"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bench]]
name = "sim"
harness = false

[features]
default = ["yosys-import", "dot-export", "tracing"]
yosys-import = ["serde", "dep:serde_json", "dep:indexmap"]
dot-export = []
tracing = ["dep:chrono", "dep:cow-utils"]
c-api = []

[dependencies]
wgpu = { version = "0.20.0", features = ["spirv"] }
bytemuck = { version = "1.16.0", features = ["derive"] }
pod-enum = "0.1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
indexmap = { version = "2.2.6", optional = true }
chrono = { version = "0.4.38", optional = true }
cow-utils = { version = "0.1.3", optional = true }
pollster = "0.3.0"
bitflags = "2.5.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
